--- a/src/main/resources/templates/FsCmt/plist.html
+++ b/src/main/resources/templates/FsCmt/plist.html
@@ -8,8 +8,8 @@
 <body>
 게시글 목록 조회(페이지로 볼껍니다)
 <br/>
-<label for="search_title">제목 키워드</label>
-<input id="search_title" />
+<label for="search_FsCmtId">제목 키워드</label>
+<input id="search_FsCmtId" />
 <label for="search_deleted">deleted 키워드</label>
 <input id="search_deleted" />
 <br/>
@@ -26,7 +26,6 @@
 <label for="search_orderby">정렬기준</label>
 <select id="search_orderby">
     <option value="created_at" selected="selected">작성일</option>
-    <option value="title">제목</option>
 </select>
 <label for="search_orderway">정렬방향</label>
 <select id="search_orderway">
@@ -37,43 +36,43 @@
 <div>
     =========================================
 </div>
-총 글 수 : <h1 id="font_fsBoard_list_size">-</h1> 개 <br/>
-가장 끝 페이지 수 : <h1 id="font_fsBoard_page_size">-</h1> 개
-<div id="tbody_fsBoard_list">
+총 글 수 : <h1 id="font_FsCmt_list_size">-</h1> 개 <br/>
+가장 끝 페이지 수 : <h1 id="font_FsCmt_page_size">-</h1> 개
+<div id="tbody_FsCmt_list">
 </div>
 
 
-<a onclick="search_fsBoard()">search</a>
+<a onclick="search_FsCmt()">search</a>
 <script>
-    search_fsBoard();
-    function search_fsBoard(){
+    //일단 페이지볼때 디폴트 정보 뿌려주기 부터 하자!!
+    search_FsCmt();
+    function search_FsCmt(){
         $.ajax({
-            url: "/api/fsboard/pagedList",
+            url: "/api/fscmt/pagedList",
             type: "POST",
             contentType : 'application/json; charset=utf-8',
             data: JSON.stringify({
-                //data는 pagedListDto에서 필요한 변수들
                 'sdate' : $("#search_sdate").val(),
                 'fdate' : $("#search_fdate").val(),
                 'orderby' : $("#search_orderby").val(),
                 'orderway' : $("#search_orderway").val(),
                 'callpage' : $("#search_callpage").val(),
                 'perpage' : $("#search_perpage").val(),
-                'title' : $("#search_title").val(),
+                'FsCmtId' : $("#search_FsCmtId").val(),
                 'deleted' : $("#search_deleted").val()
             }),
             cache: false,
             success: (data, status, xhr)=>{
-                alert("data : " + JSON.stringify(data));
-                $("#font_fsBoard_list_size").html(data.listsize);
-                $("#font_fsBoard_page_size").html(data.lastpage);
-                $("#tbody_fsBoard_list").html("");
+                //alert("data : " + JSON.stringify(data));
+                $("#font_FsCmt_list_size").html(data.listsize);
+                $("#font_FsCmt_page_size").html(data.lastpage);
+                $("#tbody_FsCmt_list").html("");
                 $("#search_callpage").val(data.callpage);
                 $("#search_perpage").val(data.perpage);
                 let tlist = data.list;
                 for(let i=0;i<tlist.length;i++){
-                    $("#tbody_fsBoard_list").append(
-                        "<div>" + "<a href='/fsboard/detail/"+tlist[i].id+"'>"+JSON.stringify(tlist[i].title)+"</a>"+"//"+ JSON.stringify(tlist[i].created_at)  + "</div>"
+                    $("#tbody_FsCmt_list").append(
+                        "<div>" + "<a href='/fscmt/detail/"+tlist[i].id+"'>"+JSON.stringify(tlist[i].FsCmtId)+"</a>"+"//"+ JSON.stringify(tlist[i].created_at)  +"</div>"
                     );
                 }
 
@@ -82,7 +81,6 @@
                 //alert("xhr : " + JSON.stringify(xhr));
             },
             error: (data)=>{
-                alert("data : " + JSON.stringify(data));
             },
         });
     }
