--- a/src/main/resources/templates/FsBoard/plist.html
+++ b/src/main/resources/templates/FsBoard/plist.html
@@ -6,7 +6,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
-게시글 목록 조회(페이지로 볼껍니다)
+게시글 목록 조회(페이지로 볼겁니다)
 <br/>
 <label for="search_title">제목 키워드</label>
 <input id="search_title" />
